Resources folder fixed